Android Jetpack Compose UI Library – lightweight common UI lib
Implemented – Spinner Components
 - SmartSpinner – fully composable spinner supporting multiple display types:
 - Dialog – pop-up selection list (SpinnerDialog)
 - BottomSheet – slide-up selection panel (SpinnerBottomSheet)
 - FullScreen – navigates to a dedicated selection screen (SpinnerFullScreenScreen - Implement your own screen like this)
 - Single & Multi-select – supports selecting one or multiple items
 - Searchable Lists – optional search bar for filtering items
 - Custom Row & Widget Content – allows passing composable content for rows and the widget itself mainly for (SpinnerDialog and SpinnerBottomSheet)
 - Integration with Navigation, check SpinnerFullScreenScreen
 - Reusable & SDK-Ready
 - Can be extended for future spinner types or custom behavior

--- a/ui_library/src/main/res/values/strings.xml
+++ b/ui_library/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
 <resources>
     <string name="btn_cancel">Cancel</string>
     <string name="btn_retry">Retry</string>
+    <string name="search">Search</string>
+    <string name="done">Done</string>
+    <string name="search_empty">No items found!</string>
+
 </resources>
